# aramaki

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  REJECTED-IDEAS.md  TECHNICAL-NOTES.md  TODO  alembic.ini  development.ini  devenv.nix  production.ini  pyproject.toml  pytest.ini  testing.ini
.github/: pull_request_template.md
.github/workflows/: test.yml
src/aramaki/: __init__.py  activitypub.py  conftest.py  federation.py  meta.py  monitoring.py  notification.py  processing.py  scripts.py  system.py
src/aramaki/agent/: main.py
src/aramaki/alembic/: env.py
src/aramaki/alembic/versions/: 20240204_b7131fce4f69.py  20240204_f342ec229dba.py  20240207_c9618fad3eb8.py  20240317_5362472a2276.py  20240317_a01c1b272031.py
src/aramaki/helpers/: devagent.py
src/aramaki/interfaces/: activitypub.py  cli.py  flask.py  sqlalchemy.py
src/aramaki/interfaces/alembic/: env.py
src/aramaki/models/: __init__.py  meta.py  observation.py  probe.py  system.py
src/aramaki/server/: conftest.py  main.py
src/aramaki/server/agentmanager/: main.py
src/aramaki/server/alembic/: env.py
src/aramaki/server/alembic/versions/: 20240202_d50e144e683a.py
src/aramaki/server/federation/: main.py
src/aramaki/server/models/: __init__.py  instance.py  meta.py  system.py
src/aramaki/server/tests/: test_system.py
src/aramaki/server/ui/: main.py  routes.py
src/aramaki/server/ui/templates/: layout.pt
src/aramaki/server/ui/views/: dashboard.py
src/aramaki/server/web/: main.py  requestapi.py
src/aramaki/server/web/static/: aramaki.css
src/aramaki/server/web/templates/: dashboard.pt  layout.pt
src/aramaki/server/web/views/: dashboard.py
src/aramaki/tests/: test_system.py
src/aramaki/web/: main.py  requestapi.py
src/aramaki/web/static/: aramaki.css
src/aramaki/web/templates/: dashboard.pt  layout.pt
src/aramaki/web/views/: dashboard.py
stubs/: zstd.pyi
stubs/aiofiles/: __init__.pyi  base.pyi  os.pyi  ospath.pyi
stubs/aiofiles/tempfile/: __init__.pyi  temptypes.pyi
stubs/aiofiles/threadpool/: __init__.pyi  binary.pyi  text.pyi  utils.pyi
stubs/pkg_resources/: __init__.pyi
stubs/pyramid/: asset.pyi  authentication.pyi  authorization.pyi  csrf.pyi  decorator.pyi  encode.pyi  events.pyi  exceptions.pyi  httpexceptions.pyi  i18n.pyi  interfaces.pyi  location.pyi  paster.pyi  path.pyi  predicates.pyi  registry.pyi  renderers.pyi  request.pyi  resource.pyi  response.pyi  router.pyi  scripting.pyi  security.pyi  session.pyi  settings.pyi  static.pyi  threadlocal.pyi  traversal.pyi  tweens.pyi  url.pyi  urldispatch.pyi  util.pyi  view.pyi  viewderivers.pyi  wsgi.pyi
stubs/pyramid/config/: __init__.pyi  actions.pyi  adapters.pyi  assets.pyi  factories.pyi  i18n.pyi  predicates.pyi  rendering.pyi  routes.pyi  security.pyi  settings.pyi  tweens.pyi  views.pyi  zca.pyi
stubs/pyramid/scripts/: common.pyi  pdistreport.pyi  prequest.pyi  proutes.pyi  pserve.pyi  pshell.pyi  ptweens.pyi  pviews.pyi
stubs/pytest_patterns/: plugin.pyi
stubs/transaction/: __init__.pyi  _compat.pyi  _manager.pyi  _transaction.pyi  interfaces.pyi
stubs/translationstring/: __init__.pyi  compat.pyi
stubs/venusian/: __init__.pyi  advice.pyi  compat.pyi
stubs/webob/: __init__.pyi  acceptparse.pyi  byterange.pyi  cachecontrol.pyi  client.pyi  compat.pyi  cookies.pyi  datetime_utils.pyi  dec.pyi  descriptors.pyi  etag.pyi  exc.pyi  headers.pyi  multidict.pyi  request.pyi  response.pyi  static.pyi  util.pyi
stubs/webtest/: __init__.pyi  app.pyi  compat.pyi  debugapp.pyi  ext.pyi  forms.pyi  http.pyi  lint.pyi  response.pyi  sel.pyi  utils.pyi
stubs/zope/interface/: __init__.pyi  _zope_interface_coptimizations.pyi  adapter.pyi  advice.pyi  declarations.pyi  document.pyi  exceptions.pyi  interface.pyi  interfaces.pyi  registry.pyi  ro.pyi  verify.pyi
stubs/zope/interface/common/: __init__.pyi  builtins.pyi  collections.pyi  idatetime.pyi  mapping.pyi  sequence.pyi
stubs/zope/sqlalchemy/: __init__.pyi  datamanager.pyi
stubs/zope/testbrowser/: browser.pyi  cookies.pyi  interfaces.pyi  utils.pyi  wsgi.pyi
stubs/zope/testbrowser/ftests/: wsgitestapp.pyi
tailwind/: tailwind.config.js
