[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aramaki"
version = "0.0.1"
description = "A federated DevOps control-plane."
authors = ["Christian Theune <ct@flyingcircus.io>"]
license = "AGPLv3"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
pyramid = "^2.0.1"
pyramid-chameleon = "^0.3"
pyramid-debugtoolbar = "^4.10"
waitress = "^2.1.2"
plaster-pastedeploy = "^1.0.1"
alembic = "^1.11.1"
pyramid-retry = "^2.1.1"
pyramid-tm = "^2.5"
sqlalchemy = "^2.0.19"
transaction = "^3.1.0"
zope-sqlalchemy = "^3.0"
babel = "^2.12.1"
pytz = "^2023.3"
# peppercorn = "^0.6"
peppercorn  = { git = "https://github.com/ctheune/peppercorn.git", branch = "htmx-workaround-1686-wrong-form-dataset-construction" }
rtmapi = "^0.7.2"
# implicit dependency that rtmapi did not specify!?!
httplib2 = "^0.22.0"
psycopg2-binary = "^2.9.9"
cachecontrol = "^0.13.1"
arrow = "^1.3.0"
filelock = "^3.13.1"
websockets = "^12"

[tool.poetry.group.dev.dependencies]
webtest = "^3.0.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.plugins."paste.app_factory"]
main = "aramaki.server.ui.main:main"

[tool.poetry.plugins."console_scripts"]
aramaki-initialize-db = "aramaki.scripts.initialize_db:main"
aramaki-server = "aramaki.server.main:main"
aramaki-agent = "aramaki.agent.main:main"

[project.urls]
Homepage = "https://github.com/flyingcircusio/aramaki"
Issues = "https://github.com/flyingcircusio/aramaki/issues"

[tool.black]
line-length = 79
